CommentDto's implementation